--- a/style/main.scss
+++ b/style/main.scss
@@ -20,10 +20,10 @@ body {
   left: 0;
   transition: all 1s linear;
   background-color: #fff;
-  opacity: 1;
+  opacity: 0;
   display: none;
   overflow-y: hidden;
-  z-index: 6;
+
   .img {
     height: 100vh;
     display: flex;
@@ -32,20 +32,23 @@ body {
     opacity: 0;
     img {
       width: 150px;
-      height: 100px;
+      height: 150px;
     }
   }
   &.on {
+
     display: block;
     @keyframes pp {
       from {
+        z-index: 999;
         opacity: 0;
       }
       to {
+        z-index: 999;
         opacity: 1;
       }
     }
-    animation: pp 2s linear;
+    animation: pp 3s linear;
     .img {
       display: flex;
       align-items: center;
@@ -245,12 +248,21 @@ body {
       right: 0;
       top: 0;
       cursor: pointer;
-      h1 {
-        font-size: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #fff;
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 10%;
+        width: 25px;
+        height: 1px;
+        background-color: #fff;
+      }
+      &::before {
+        transform: rotate(-45deg);
+      }
+      &::after {
+        transform: rotate(45deg);
       }
     }
   }
