--- a/style/main.css
+++ b/style/main.css
@@ -189,7 +189,6 @@ body:has(.start_ad.on) {
   position: fixed;
   top: 0;
   left: 0;
-  transition: all 1s linear;
   background-color: #fff;
   opacity: 0;
   display: none;
@@ -203,12 +202,12 @@ body:has(.start_ad.on) {
   opacity: 0;
 }
 .start_bg .img img {
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 300px;
 }
 .start_bg.on {
   display: block;
-  animation: pp 3s linear;
+  animation: pp 3s;
 }
 @keyframes pp {
   from {
@@ -225,7 +224,7 @@ body:has(.start_ad.on) {
   align-items: center;
   justify-content: center;
   opacity: 1;
-  animation: ll 0.5s linear;
+  animation: ll 1s linear;
 }
 @keyframes ll {
   from {
