--- a/style/main.scss
+++ b/style/main.scss
@@ -21,7 +21,6 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  transition: all 1s linear;
   background-color: #fff;
   opacity: 0;
   display: none;
@@ -33,8 +32,8 @@ body {
     justify-content: center;
     opacity: 0;
     img {
-      width: 150px;
-      height: 150px;
+      width: 300px;
+      height: 300px;
     }
   }
   &.on {
@@ -49,7 +48,7 @@ body {
         opacity: 1;
       }
     }
-    animation: pp 3s linear;
+    animation: pp 3s ;
     .img {
       display: flex;
       align-items: center;
@@ -65,7 +64,7 @@ body {
           transform: translateY(0px);
         }
       }
-      animation: ll 0.5s linear;
+      animation: ll 1s linear;
     }
   }
 }
