--- a/style/main.scss
+++ b/style/main.scss
@@ -633,6 +633,9 @@ body {
           background-color: #fff;
           transition: all 0.5s linear;
         }
+        h3,span{
+            padding-bottom: 5px;
+        }
       }
       span {
         padding-left: 10px;
