--- a/style/main.css
+++ b/style/main.css
@@ -760,7 +760,7 @@ body:has(.start_ad.on) {
   content: "";
   width: 40px;
   height: 2px;
-  left: 0;
+  right: 0;
   bottom: 0;
   background-color: #fff;
   position: absolute;
