--- a/style/main.scss
+++ b/style/main.scss
@@ -611,7 +611,7 @@ body {
         content: "";
         width: 40px;
         height: 2px;
-        left: 0;
+        right: 0;
         bottom: 0;
         background-color: #fff;
         position: absolute;
